[COLAB-2151] Improved layout of header bar to avoid overflows

--- a/view/src/main/resources/static/sass/partials/base/_layout.scss
+++ b/view/src/main/resources/static/sass/partials/base/_layout.scss
@@ -72,7 +72,7 @@ ol, ul {
   margin-left: 0;
 }
 
-.cke_editable ol, ul {
+.cke_editable ol, .cke_editable ul {
   margin-left: 15px;
 }
 
